Personalize _config.yml file

--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Jekyll workshop-template https://github.com/evanwill/workshop-template
 # based on minima theme https://github.com/jekyll/minima
 
-title: go-go gh-pages!
+title: GitHub Static website hosting
 description: > 
   Learn about GitHub pages and Jekyll. 
-keywords: "github, github-pages, websites, static gen, hosting, html, workshop, gh-pages"
+keywords: "github, github-pages, websites, static gen, hosting, html, gh-pages"
 
-url: "https://evanwill.github.io/go-go-ghpages" 
+url: "https://inikimedia.github.io/gh-pages-hosting" 
 
 # author settings for cc-by
 author: evan will
@@ -14,7 +14,7 @@ github_username: evanwill
 pub_year: 2017
 repo: "https://github.com/evanwill/go-go-ghpages"
 
-google_analytics: UA-74844011-1
+google_analytics:
 
 # Build settings
 markdown: kramdown
