Further update of base site url

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >
   Learn about GitHub pages and Jekyll. 
 keywords: "github, github-pages, websites, static gen, hosting, html, gh-pages"
 
-url: "github-static-hosting-presentation" 
+url: "https://github.com/InikiMedia/github-static-hosting-presentation/" 
 
 # author settings for cc-by
 author: evan will
